--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,8 +1,3 @@
-@font-face {
-  font-family: Cabinet Grotesk;
-  src: url("../../vendor/CabinetGrotesk-Regular.woff") format("woff");
-}
-
 .header {
   display: flex;
   align-items: center;
@@ -62,7 +57,7 @@
 }
 
 .header__avatar {
-  margin-left: 88px;
+  margin-left: 12px;
 }
 
 @media screen and (max-width: 630px) {
